--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -4,16 +4,16 @@
             <div class="nav">
                 <div class="sb-sidenav-menu-heading">Sistema</div>
                 <a class="nav-link" routerLink="/home">
-                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                    <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                     Home
                 </a>
-                <div class="sb-sidenav-menu-heading">Cadastros</div>
+                <div class="sb-sidenav-menu-heading">Cadastro e Consulta</div>
                 <a class="nav-link" routerLink="/clientes-lista">
-                    <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                    <div class="sb-nav-link-icon"><i class="fas fa-user-circle"></i></div>
                     Clientes
                     </a>
-                <a class="nav-link" routerLink="/servico-prestado-form">
-                    <div class="sb-nav-link-icon"><i class="fas fa-money"></i></div>
+                <a class="nav-link" routerLink="/servico-prestado-lista">
+                    <div class="sb-nav-link-icon"><i class="fas fa-wrench"></i></div>
                     Serviços Prestados
                 </a>
                 </div>
