--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -8,11 +8,11 @@
                     Home
                 </a>
                 <div class="sb-sidenav-menu-heading">Cadastro e Consulta</div>
-                <a class="nav-link" routerLink="/clientes-lista">
+                <a class="nav-link" routerLink="/clientes">
                     <div class="sb-nav-link-icon"><i class="fas fa-user-circle"></i></div>
                     Clientes
                     </a>
-                <a class="nav-link" routerLink="/servico-prestado-lista">
+                <a class="nav-link" routerLink="/servico-prestado/lista">
                     <div class="sb-nav-link-icon"><i class="fas fa-wrench"></i></div>
                     Serviços Prestados
                 </a>
