--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,52 +1,51 @@
-<div id="layoutAuthentication">
-    <div id="layoutAuthentication_content">
-        <main>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="card shadow-lg border-0 rounded-lg mt-5">
-                            <div class="card-header">
-                                <h3 class="text-center font-weight-light my-4">
-                                    {{ cadastro ? 'Cadastro' : 'Entrar'}}
-                                </h3>
-                            </div>
-                            <div class="card-body">
-                                <div class="alert alert-danger" *ngIf="loginError">
-                                    Login e/ou Senha incorretos
+<div class="bg-primary">
+    <div id="layoutAuthentication">
+        <div id="layoutAuthentication_content">
+            <main>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-5">
+                            <div class="card shadow-lg border-0 rounded-lg mt-5">
+                                <div class="card-header">
+                                    <h3 class="text-center font-weight-light my-4">
+                                        {{ cadastro ? 'Cadastro' : 'Entrar'}}
+                                    </h3>
                                 </div>
-                                <form [formGroup]="formulario" (ngSubmit)="submit()">
-                                    <div class="form-group">
-                                        <label class="small mb-1">Usuário</label>
-                                        <input type="text" formControlName="username" class="form-control py-4" placeholder="Digite seu usuário">
+                                <div class="card-body">
+                                    <form [formGroup]="formulario" (ngSubmit)="submit()">
+                                        <div class="form-group">
+                                            <label class="small mb-1">Usuário</label>
+                                            <input type="text" formControlName="username" class="form-control py-4" placeholder="Digite seu usuário">
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="small mb-1">Senha</label>
+                                            <input type="password" formControlName="password" class="form-control py-4" placeholder="Digite sua senha">
+                                        </div>
+                                        <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
+                                            <button type="submit" class="btn btn-primary" *ngIf="!cadastro">
+                                                Entrar
+                                            </button>
+                                            <button type="button" class="btn btn-success" *ngIf="cadastro" (click)="cadastrar()">
+                                                Cadastrar
+                                            </button>
+                                            <button type="button" (click)="voltarLogin()" class="btn btn-warning ml-1" *ngIf="cadastro">
+                                                Voltar para login
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="card-footer text-center">
+                                    <div class="small">
+                                        <a href="#" (click)="preparaCadastro($event)">
+                                            Não possui cadastro? Cadastre-se
+                                        </a>
                                     </div>
-                                    <div class="form-group">
-                                        <label class="small mb-1">Senha</label>
-                                        <input type="password" formControlName="password" class="form-control py-4" placeholder="Digite sua senha">
-                                    </div>
-                                    <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-                                        <button type="submit" class="btn btn-primary" *ngIf="!cadastro">
-                                            Entrar
-                                        </button>
-                                        <button type="button" class="btn btn-success" *ngIf="cadastro">
-                                            Cadastrar
-                                        </button>
-                                        <button type="button" (click)="voltarLogin()" class="btn btn-warning ml-1" *ngIf="cadastro">
-                                            Voltar para login
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="card-footer text-center">
-                                <div class="small">
-                                    <a href="#" (click)="preparaCadastro($event)">
-                                        Não possui cadastro? Cadastre-se
-                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </main>
+            </main>
+        </div>
     </div>
 </div>
