--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
                     Home
                 </a>
                 <div class="sb-sidenav-menu-heading">Cadastro e Consulta</div>
-                <a class="nav-link" routerLink="/clientes">
+                <a class="nav-link" routerLink="/clientes/lista">
                     <div class="sb-nav-link-icon"><i class="fas fa-user-circle"></i></div>
                     Clientes
                     </a>
@@ -19,8 +19,14 @@
                 </div>
         </div>
         <div class="sb-sidenav-footer">
-            <div class="small">Logged in as:</div>
-            Start Bootstrap
+            <div class="small">Logado como:</div>
+            {{user}}
+            <div class="row">
+                <a class="nav-link" (click)="logout()" style="cursor: pointer;"><i class="fas fa-sign-out-alt"></i>Sair</a>
+            </div>
+            
+            
         </div>
+       
     </nav>
 </div>
